[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/4 Animated objects/keys/keys_blank.png" type="Texture" id=1]
[ext_resource path="res://keys_hud.gd" type="Script" id=2]
[ext_resource path="res://Assets/New folder/PNG/Icon16.png" type="Texture" id=3]
[ext_resource path="res://Assets/New folder/Option green.png" type="Texture" id=4]
[ext_resource path="res://Assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.835294, 0.772549, 0.105882, 1 )
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[node name="keys_hud" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_right = 167.0
margin_bottom = 73.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite1" type="Sprite" parent="CanvasLayer/Panel/TextureRect"]
position = Vector2( 34.487, 35.6762 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Panel/TextureRect"]
position = Vector2( 84.434, 35.676 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Panel/TextureRect"]
position = Vector2( 132.002, 35.676 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="HomeButton" type="Button" parent="CanvasLayer"]
margin_left = -4.87282
margin_top = -3.40138
margin_right = 111.127
margin_bottom = 92.5986
rect_scale = Vector2( 0.4, 0.4 )
custom_colors/font_color = Color( 0.0627451, 0.141176, 0.545098, 1 )
custom_colors/font_color_hover = Color( 0.14902, 0.156863, 0.305882, 1 )
custom_fonts/font = SubResource( 2 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingButton" type="Button" parent="CanvasLayer"]
margin_left = 952.0
margin_top = -1.0
margin_right = 1078.0
margin_bottom = 119.0
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/HomeButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/SettingButton" to="." method="_on_SettingButton_pressed"]
